# pm-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TEST_INTEGRATION.md  TUTORIAL.md  WORKFLOW.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
completions/: pm-completion.bash  pm-completion.zsh
src/pm/: __init__.py  claude_md.py  cli.py  db.py  git_integration.py  metrics.py  models.py  priority.py  utils.py
src/pm_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_claude_md.py  test_git_integration.py  test_metrics.py  test_models.py  test_priority.py  test_utils.py
