[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-cli"
version = "0.1.0"
description = "A language-agnostic CLI tool for managing project goals, todos, and priorities"
authors = [{name = "Carlo Krups"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.1.0",
    "sqlalchemy>=2.0.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "alembic>=1.12.0",
    "questionary>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
pm = "pm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
